# visitations-backend

./: .env  .secret.key  Cargo.toml  Readme.md
migrations/2020-12-22-081854_users/: up.sql
migrations/2020-12-22-095323_visitors/: down.sql  up.sql
migrations/2020-12-23-015334_visits/: up.sql
migrations/2020-12-23-020308_prisons/: up.sql
migrations/2021-01-08-012020_cases/: up.sql
src/: api_error.rs  constants.rs  main.rs  response.rs  schema.rs
src/auth/: routes.rs
src/cases/: model.rs  routes.rs
src/middleware/: authen_middleware.rs
src/prisons/: mod.rs  model.rs  prison_impl.rs  routes.rs
src/users/: mod.rs  model.rs  routes.rs  user_token.rs
src/utils/: encryption.rs  mod.rs  token_utils.rs  upload.rs
src/visitors/: model.rs  routes.rs
src/visits/: model.rs  routes.rs
