[package]
name = "visitations-backend"
version = "0.1.0"
authors = ["bourne-j114 <bournej114@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "3.3"
actix-rt = "1.1"
actix-service = "1.0"
actix-cors = "0.5"
chrono = { version = "0.4", features = ["serde"] }
dotenv = "0.15"
diesel = { version = "1.4", features = ["postgres", "r2d2", "uuid", "chrono"] }
diesel_migrations = "1.4"
env_logger = "0.8"
lazy_static = "1.4"
log = "0.4"
serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"
r2d2 = "0.8"
rand = "0.7"
uuid = { version = "0.6", features = ["serde", "v4"] }
reqwest = { version = "0.10.5", features = ["cookies", "json"]}
futures = "0.3.1"
regex = "1.3.7"
serde_qs = "0.5.2"
actix-multipart = "0.2.0"
percent-encoding = "2.1.0"
derive_more = "0.99.2"
bcrypt = "0.6.2"
jsonwebtoken = "7.1.0"
rust-crypto = "^0.2"
binascii = "0.1.4"
anyhow = "1.0"